fixed title spacing too tight on Soul Creating/Space Creating; Fixed all timing issues with animation mentioned in linear comments

--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -157,7 +157,7 @@ html.bodyAuthDeleted {
 		.icon { display: none; }
 	}
 
-	.soulContent { width: 100px; }
+	.soulContent { width: 100px; padding-top: 5px; }
 	.soulContent {
 		.account, .space, .line { transition: all 600ms ease-in; position: absolute; display: flex; flex-direction: column; }
 		.account, .space { align-items: center; gap: 12px; width: 100px; top: 0; left: 0; }
